# distributed_chatting_server

./: README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: main.yml
chats/: containers.py  models.py  urls.py
chats/applications/: __init__.py  bookmark_service.py  chat_get_service.py  chat_service.py
chats/domains/: __init__.py  bookmark_repository.py  bookmarks.py  chat_repository.py  chats.py  participants.py
chats/migrations/: 0001_initial.py  0002_alter_chat_headcount_alter_chat_name.py  0002_participant.py  0003_alter_chat_name.py  0004_make_full_text_index.py  0005_bookmark.py  0006_alter_bookmark_chat_alter_bookmark_member.py  0007_alter_bookmark_member_and_more.py
chats/presentations/: __init__.py  bookmark_create_view.py  bookmark_view.py  chat_delete_view.py  chat_detail_view.py  chat_entry_view.py  chat_joined_members_view.py  chat_more_messages_view.py  chat_room_get_view.py  chat_view.py
chats/serializers/: __init__.py  bookmark_serializer.py  chat_serializer.py
config/nginx/: nginx.conf
members/: containers.py  models.py  urls.py
members/applications/: __init__.py  member_service.py  token_service.py
members/domains/: __init__.py  member_repository.py  members.py
members/migrations/: 0001_initial.py
members/presentations/: __init__.py  logout_view.py  refresh_access_token_view.py  signin_view.py  signup_view.py
members/serializers/: __init__.py  member_serializer.py
server/: asgi.py  urls.py  wsgi.py
socket_app/: views.py
utils/: connect_dynamodb.py  date.py  lookups.py  redis_utils.py  validators.py
(+12 files in other folders)
