[tool.poetry]
name = "clclcafe"
version = "0.1.0"
description = ""
authors = ["leehjhjhj <tsukiakarii@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
channels = "^4.0.0"
daphne = "^4.0.0"
dependency-injector = "^4.41.0"
djangorestframework-simplejwt = "^5.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
